# ximea_importer

./: CMakeLists.txt  README.md  conanfile.py  lms_package.json
include/: ximea_importer.h
src/: interface.cpp  ximea_importer.cpp
ximea_driver/: README  install  version_LINUX_SP.txt
ximea_driver/CamTool.32/: libopenh264.so.0  xiCamTool
ximea_driver/CamTool.64/: xiCamTool
ximea_driver/CamTool.64/camdesc/: xiapi_camera_description_FULL.xml
ximea_driver/examples/streamViewer/: Makefile  README  streamViewer.cpp
ximea_driver/examples/xiApiPlusOpenCV/: xiApiPlusOcv.cpp  xiApiPlusOcv.hpp  xiApiPlusOcvExample  xiApiPlusOcvExample.cpp
ximea_driver/examples/xiSample/: xiSample.cpp
ximea_driver/include/: m3Api.h  m3Ext.h  xiApi.h
ximea_driver/libs/libusb/: 99-ximea.rules  libusb-1-increase_buffer_size.patch  readme-oldusb3.txt  readme.txt
ximea_driver/libs/libusb/X32/: libusb-1.0.so.0.1.0
ximea_driver/libs/libusb/X64/: libusb-1.0.so.0.1.0
ximea_driver/libs/libusb/Xarm/: libusb-1.0.so.0.1.0
ximea_driver/libs/libusb/vanillaX64/: libusb-1.0.so.0.1.0
ximea_driver/libs/libusb/vanillaXarm/: libusb-1.0.so.0.1.0
ximea_driver/modules/: currera_acq.ko
ximea_driver/scripts/: currera_init  install_steps
ximea_driver/src/currera_acq_module/: Makefile  currera_acq.c  currera_acq.h
ximea_driver/src/ximea_cam_pcie/: PCIe_AbortStreaming.inc  enable_gpudirect.sh  pcie_common_fpga_regs.h  ximea_cam_pcie.c  ximea_cam_pcie.h
